# paypal-fee-crawler

./: Makefile  README.md  paypal-fee-data-coding-agent-prompt.md  pyproject.toml
scripts/: generate_fingerprints.py  seed_from_fixtures.py
src/paypal_fee_crawler/: __init__.py  classify.py  cli.py  cms_context.py  comparison.py  components.py  constants.py  crawler.py  derived_categories.py  discovery.py  exceptions.py  extraction.py  hashing.py  html_tables.py  http.py  http_cache.py  market_mapping.py  models.py  normalize.py  output.py  pricing_tokens.py  profiles.py  registry.py  regression.py  scoring.py  validation.py
src/paypal_fee_crawler/classify/: __init__.py  apm.py  conditions.py  patterns.py  products.py  references.py  rules.py  schedules.py  text_utils.py  variants.py
src/paypal_fee_crawler/registries/: classifier_clusters.json
tests/: conftest.py  test_classification.py  test_classify.py  test_classify_unit.py  test_cli.py  test_cms_context.py  test_components.py  test_country_discovery.py  test_crawler.py  test_discovery.py  test_extraction.py  test_fee_tables.py  test_fixtures.py  test_html_tables.py  test_http.py  test_http_cache.py  test_mutation.py  test_normalization.py  test_output.py  test_output_transaction_edge_cases.py  test_pricing_tokens.py  test_profiles.py  test_publication.py  test_registry.py  test_regression.py  test_rich_text.py  test_validation.py  test_validation_complete_semantics.py
tests/fixtures/: de.html  gb.html  generate_fixtures.py  paypal-de-real.html  paypal-gb-real.html  paypal-us-real.html  us.html
tests/fixtures/corpus/: generate_fixtures.py
tests/fixtures/corpus/gold/: de-fixed.json  gb-standard.json
(+1 files in other folders)
